rama-macros/tests/as_ref/fail/wrap_no_arc.stderr
error: `#[as_ref(wrap)]` is only supported for Arc types
  --> tests/as_ref/fail/wrap_no_arc.rs:13:10
   |
13 |     app: AppState,
   |          ^^^^^^^^
